# dpd-client

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
examples/: async_drug_product.py  sync_drug_product.py
scripts/: release.py
src/dpd_client/: __init__.py  cli.py  client.py  errors.py  http.py  models.py  params.py
tests/: test_caching_and_errors.py  test_client.py  test_client_async.py  test_client_sync.py  test_more_endpoints.py
