[project]
name = "dpd-client"
version = "0.2.0"
description = "Python client and CLI for Health Canada Drug Product Database (DPD) API"
readme = "README.md"
authors = [
    { name = "tlow22", email = "thaddeuslow@outlook.com" },
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
    "tenacity>=9.1.2",
    "typer>=0.17.4",
]

[project.scripts]
dpd = "dpd_client.cli:app"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-recording>=0.13.4",
    "respx>=0.22.0",
    "ruff>=0.13.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
]
